--- a/style/header.css
+++ b/style/header.css
@@ -2,6 +2,8 @@
     width: 24px;
     height: 24px;
     background-image: url(/imagens/Menu.svg);
+    background-repeat: no-repeat;
+    background-position: center;
     display: inline-block;
 }
 
@@ -10,6 +12,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    position: relative;
 }
 
 .container{
@@ -19,4 +22,14 @@
 
 .container_imagem{
     padding: 1em;
+}
+
+.lista-menu{
+    display: none;
+    position: absolute;
+    top: 100%;
+}
+
+.container_botao:checked ~ .lista-menu{
+    display: block;
 }
