--- a/style/header.css
+++ b/style/header.css
@@ -20,7 +20,7 @@
     align-items: center;
 }
 
-.container_imagem{
+.container__imagem{
     padding: 1em;
 }
 
@@ -28,28 +28,24 @@
     display: none;
     position: absolute;
     top: 100%;
-<<<<<<< HEAD
     width: 60vw;
-=======
->>>>>>> f88ba3a223abe83b560c8d88a93a130cd306eb5f
 }
 
-.container_botao:checked ~ .lista-menu{
+.container__botao:checked ~ .lista-menu{
     display: block;
-<<<<<<< HEAD
 }
 
-.lista-menu_titulo, .lista-menu_item{
+.lista-menu__titulo, .lista-menu__item{
     padding: 1em;
     background-color: var(--branco);
 }
 
-.lista-menu_titulo{
+.lista-menu__titulo{
     color: var(--laranja);
     font-weight: 700;
 }
 
-.lista-menu_link{
+.lista-menu__link{
     background: var(--azul-degrade);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -57,8 +53,6 @@
     text-transform: uppercase;
 }
 
-.container_botao{
+.container__botao{
     display: none;
-=======
->>>>>>> f88ba3a223abe83b560c8d88a93a130cd306eb5f
 }
