--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url(style/header.css);
 @import url(style/banner.css);
+@import url(style/carrosel.css);
 
 :root{
     --cor-de-fundo: #EBECEE;
@@ -7,6 +8,7 @@
     --laranja: #EB9B00;
     --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
     --fonte-principal: "Poppins";
+    --azul: #002F52;
 }
 
 body{
@@ -14,4 +16,16 @@ body{
     font-family: var(--fonte-principal);
     font-size: 16px;
     font-weight: 400;
+}
+
+.botoes__item{
+    margin: 0 0.5em;
+}
+
+.botoes__ancora{
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    color: var(--branco);
+    font-weight: 700;
+    text-decoration: none;
 }
